kubernetes/ntp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntp
  namespace: ntp
  labels:
    app: ntp
    app.kubernetes.io/instance: ntp
spec:
  replicas: 1 # 2?
  strategy:
    type: Recreate #RollingUpdate
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ntp
  template:
    metadata:
      labels:
        app: ntp
      annotations:
        enable.version-checker.io/ntp: "true"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "br1-vlan3",
            "namespace": "default",
            "mac": "10:01:01:00:30:02",
            "ips": ["10.101.3.2/24"]
          }]
    spec:
      # tolerations:
      #   - key: node-role.kubernetes.io/master
      #     effect: NoSchedule
      #   - key: node-role.kubernetes.io/control-plane
      #     effect: NoSchedule
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: node-role.kubernetes.io/control-plane
      #               operator: Exists
      #             - key: node-role.kubernetes.io/master
      #               operator: Exists
      # podAntiAffinity:
      #   requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchLabels:
      #           app: ntp
      #       topologyKey: "kubernetes.io/hostname"
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: false
      hostname: ntp
      restartPolicy: Always
      automountServiceAccountToken: false
      serviceAccountName: ntp
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - image: docker.io/cturra/ntp@sha256:8ee0cfcabfa3d0d77dde02cb2930da02da8c33a2b7393bb429010cbae0b9d509
          imagePullPolicy: IfNotPresent
          name: ntp
          ports:
            - containerPort: 123
              name: ntp
              protocol: UDP
          securityContext:
            privileged: true
            runAsNonRoot: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              add:
                - CAP_NET_BIND_SERVICE
              drop:
                - ALL
          resources:
            requests:
              ephemeral-storage: "15Mi"
              memory: "16Mi"
              cpu: "5m"
            limits:
              ephemeral-storage: "15Mi"
              memory: "32Mi"
              cpu: "50m"
          volumeMounts:
            - name: ntp-config
              mountPath: /etc/chrony/
            - name: ntp-lib
              mountPath: /var/lib/chrony
            - name: ntp-run
              mountPath: /run
            - name: ntp-var-run
              mountPath: /var/run
            - mountPath: /usr/bin/probe.sh
              name: probe
              subPath: probe.sh
          livenessProbe:
            exec:
              command:
                - /usr/bin/probe.sh
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - /usr/bin/probe.sh
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
      volumes:
        - name: ntp-config
          emptyDir:
            sizeLimit: 10Mi
        - name: ntp-lib
          emptyDir:
            sizeLimit: 10Mi
        - name: ntp-run
          emptyDir:
            sizeLimit: 10Mi
        - name: ntp-var-run
          emptyDir:
            sizeLimit: 10Mi
        - configMap:
            defaultMode: 511
            name: probe
          name: probe
